# caffeinate2

./: Cargo.toml  LICENSE.txt  README.md  build.rs  repro_current  repro_proposed  repro_verification
.github/workflows/: build.yml  release.yml
objc/: IOPMLibPrivate.h  LICENSE.txt  caffeinate2.m  pmstub.m
src/: duration_parser.rs  lib.rs  lock_logic.rs  main.rs  power_management.rs  process_lock.rs  sleepdetect.rs
