[package]
name = "caffeinate2"
version = "0.5.3"
edition = "2021"
authors = ["Randomblock1 <randomblock1@pm.me>"]
description = "Caffeinate MacOS utility with more options. Temporarily prevent your system from sleeping."
license = "MIT"
repository = "https://github.com/randomblock1/caffeinate2"
readme = "README.md"
homepage = "https://randomblock1.com"
keywords = ["macos", "utility", "caffeinate"]
categories = ["command-line-utilities"]
default-run = "caffeinate2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["alloc", "clock", "now", "std"] }
clap = { version = "4.5.23", features = ["derive", "wrap_help"] }
core-foundation = "0.10.0"
libloading = "0.8.6"
nix = { version = "0.29.0", features = ["user", "event"] }
regex = { version = "1.10.2", default-features = false, features = ["std", "unicode-perl"] }
signal-hook = "0.3.17"

[[bin]]
name = "caffeinate2"
path = "src/main.rs"

[[bin]]
name = "sleepdetect"
path = "src/sleepdetect.rs"