[package]
name = "caffeinate2"
version = "0.8.0"
edition = "2024"
authors = ["Randomblock1 <randomblock1@pm.me>"]
description = "Caffeinate MacOS utility with more options. Temporarily prevent your system from sleeping."
license = "MIT"
repository = "https://github.com/randomblock1/caffeinate2"
readme = "README.md"
homepage = "https://randomblock1.com"
keywords = ["macos", "utility", "caffeinate"]
categories = ["command-line-utilities"]
default-run = "caffeinate2"

[dependencies]
chrono = { version = "0.4", features = ["alloc", "clock", "now", "std"] }
clap = { version = "4.5", features = ["derive", "wrap_help"] }
humantime = "2.3"
nix = { version = "0.30", features = ["user", "event", "fs", "signal"] }
signal-hook = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-core-foundation = "0.3.2"
objc2-io-kit = "0.3"

[[bin]]
name = "caffeinate2"
path = "src/main.rs"

[[bin]]
name = "sleepdetect"
path = "src/sleepdetect.rs"
